worked on more styling. almost completed emailConf.

--- a/PortfolioMVC.UI.MVC/Views/Home/About.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/About.cshtml
@@ -7,6 +7,10 @@
 <section id="about" class="about">
     <div class="container" data-aos="fade-up">
 
+        <br />
+        <br />
+        <br />
+        <br />
         <div class="section-title">
             <h2>About</h2>
         </div>
@@ -15,7 +19,7 @@
 
             <div class="col-md-4 d-flex align-items-center mt-4">
                 <div id="jokeBox" class="about icon-box">
-                    <h1>WEB API GOES HERE...</h1>
+                    <p>WEB API GOES HERE...</p>
                    
                 </div>
             </div>
@@ -29,18 +33,19 @@
 
             <div class="col-md-4 d-flex align-items-center mt-4">
                 <p class="about icon-box">
-                    I am a passionate and determined middle-aged woman on an exciting journey to break into the world of web development. With years of diverse life experiences under my belt, I've decided to explore the ever-evolving realm of coding and design. My story is one of resilience and adaptability.
-                    <br>
-                    I am dedicated to mastering both the front-end and back-end aspects of web applications, making for a versatile and future-ready developer. I've embraced the challenge of learning new programming languages, and crafting user-friendly, visually
-                    <br>
-                    My transformation from a non-tech background into web development is not just about acquiring technical skills; it's also a testament to the power of lifelong learning and personal growth. I believe that diversity in this industry is crucial, and I'm here to prove that it's never too late to follow your passion and carve a new path in tech!
+                    COOL THINGS ABOUT MYSELF GO HERE.....
                 </p>
+
+                
             </div>
 
             
 
         </div>
-
+        <br />
+        <br />
+        <br />
+        <br />
     </div>
    
 </section>
