--- a/PortfolioMVC.UI.MVC/Views/Home/EmailConfirmation.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/EmailConfirmation.cshtml
@@ -1,14 +1,38 @@
-﻿
-@model PortfolioMVC.UI.MVC.Models.ContactViewModel
+﻿@model PortfolioMVC.UI.MVC.Models.ContactViewModel
 
 @{
     ViewData["Title"] = "Email Confirmation";
 }
 
+
+<section id="emailConf" class="emailConf">
+    <div class="container" data-aos="fade-up">
+
+        <br />
+        <br />
+        <br />
+        <br />
+        <div class="col-md-4 d-flex align-items-center mt-4">
+            <div class="emailConf icon-box">
+
+                <h2>Your message was sent!</h2>
+                <p>
+                    Thank you for your interest. I look forward to speaking with you soon.
+                    <br />
+                    <br />
+                    <img src="/img/MyUploads/emailConf.jpg" class="img-fluid" alt="lego stormtrooper walking in desert" />
+                </p>
+
+            </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
+    </div>
+</section>
 <br />
 <br />
 <br />
 <br />
 <br />
-<br />
-<h1>Hello</h1>
