--- a/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
@@ -21,15 +21,18 @@
             <P>***PROJECTS WILL BE UPDATED SOON***</P>
         </div>
 
-        <!-- TODO | ADD LINKS IF NEEDED | ADD BADGES-->
+      
         <div class="row" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-12 d-flex justify-content-center">
+
+                <!--Portfolio filters | uncomment later if needed-->
                 <ul id="portfolio-flters">
-                    <!-- <li data-filter="*" class="filter-active">All</li>
+                    @* <li data-filter="*" class="filter-active">All</li>
                     <li data-filter=".filter-app">App</li>
                     <li data-filter=".filter-card">Card</li>
-                    <li data-filter=".filter-web">Web</li> -->
+                    <li data-filter=".filter-web">Web</li> *@
                 </ul>
+
             </div>
         </div>
 
@@ -45,7 +48,7 @@
                         <p>C#</p>
 
                         <div class="portfolio-links">
-                            <a href="~/img/MyUploads/portfolio/dungeonApp.png"
+                            <a href="~/img/MyUploads/portfolio/Dungeon/Dungeon1.png"
                                data-gallery="portfolioGallery"
                                class="portfolio-lightbox"
                                title="DungeonApp"><i class="bx bx-plus"></i></a>
@@ -59,6 +62,7 @@
                 </div>
             </div>
             <!-- End Dungeon -->
+
             <!-- StoreFront -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                 <div class="portfolio-wrap">
@@ -84,6 +88,7 @@
                 </div>
             </div>
             <!-- End StoreFront -->
+
             <!-- TODO | MVC -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="portfolio-wrap">
@@ -107,6 +112,7 @@
                 </div>
             </div>
             <!-- End MVC -->
+
             <!-- API -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
@@ -132,6 +138,7 @@
                 </div>
             </div>
             <!-- End API -->
+
             <!-- TODO | TO DO APP -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                 <div class="portfolio-wrap">
@@ -154,7 +161,8 @@
                 </div>
             </div>
             <!-- End Todo -->
-            <!-- COLAB PROJECT -->
+
+            <!-- TEAM PROJECT -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="portfolio-wrap">
                     <img src="~/img/MyUploads/tealLogo.jpeg" class="img-fluid" alt="">
