--- a/PortfolioMVC.UI.MVC/Views/Shared/_DetailsToDoPartial.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Shared/_DetailsToDoPartial.cshtml
@@ -9,20 +9,24 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/MyUploads/portfolio/C# Badge - 2023-10-12.png" alt="C# Badge">
-                        </div>
-
-                        <!-- <div class="swiper-slide">
-                          <img src="" alt="">
-                        </div> -->
-                        <!-- Uncomment if going to add new project photos to details slider -->
-                        <!-- <div class="swiper-slide">
-                          <img src="" alt="">
+                            <img src="~/img/MyUploads/portfolio/ToDoAPI/ToDoAPI1.png" alt="#">
                         </div>
 
                         <div class="swiper-slide">
-                          <img src="" alt="">
-                        </div> -->
+                            <img src="~/img/MyUploads/portfolio/ToDoAPI/ToDoAPI2.png" alt="#">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="~/img/MyUploads/portfolio/ToDoAPI/ToDoAPI3.png" alt="#">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="~/img/MyUploads/portfolio/ToDoAPI/ToDoAPI4.png" alt="#">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="~/img/MyUploads/portfolio/ToDoAPI/ToDoAPI5.png" alt="#">
+                        </div>
 
                     </div>
                     <div class="swiper-pagination"></div>
@@ -32,33 +36,32 @@
             <!-- TODO | CREATE DETAILS CARDS FOR REMAINING PROJECTS -->
             <div class="col-lg-4">
                 <div class="portfolio-info">
-                    <h3>Dungeon Console App</h3>
+                    <h3>To Do API</h3>
                     <ul>
-                        <!-- <li><strong>Stack</strong>: C#</li> -->
+                     
                         <!-- TODO | INSERT BADGE LINK -->
                         <li>
                             <strong>Completion Badge</strong>:
-                            <blockquote class="badgr-badge" style="font-family: Helvetica, Roboto, &quot;Segoe UI&quot;, Calibri, sans-serif;"><a href="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g?identity__email=amv1717%40gmail.com"><img width="120px" height="120px" src="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g/image"></a><p class="badgr-badge-name" style="hyphens: auto; overflow-wrap: break-word; word-wrap: break-word; margin: 0; font-size: 16px; font-weight: 600; font-style: normal; font-stretch: normal; line-height: 1.25; letter-spacing: normal; text-align: left; color: #05012c;">Full Stack Coding Program - C# Badge</p><p class="badgr-badge-date" style="margin: 0; font-size: 12px; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #555555;"><strong style="font-size: 12px; font-weight: bold; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #000;">Awarded: </strong>Oct 12, 2023</p><p class="badgr-badge-recipient" style="margin: 0; font-size: 12px; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #555555;"><strong style="font-size: 12px; font-weight: bold; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #000;">Awarded To: </strong><span style="display: block;"> Alicia Villegas</span></p><p style="margin: 16px 0; padding: 0;"><a class="badgr-badge-verify" target="_blank" href="https://badgecheck.io?url=https%3A%2F%2Fapi.badgr.io%2Fpublic%2Fassertions%2FKr6Pnb-XT2q2Zb5xQZGP8g%3Fidentity__email%3Damv1717%2540gmail.com&amp;identity__email=amv1717%40gmail.com" style="box-sizing: content-box; display: flex; align-items: center; justify-content: center; margin: 0; font-size:14px; font-weight: bold; width: 48px; height: 16px; border-radius: 4px; border: solid 1px black; text-decoration: none; padding: 6px 16px; margin: 16px 0; color: black;">VERIFY</a></p><script async="async" src="https://badgr.com/assets/widgets.bundle.js"></script></blockquote>
 
-                            <!-- <img src="assets/img/MyUploads/portfolio/C# Badge - 2023-10-12.png" alt=""> -->
-                            <!-- <iframe src="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=amv1717%40gmail.com" title="Badge: Full Stack Coding Program - C# Badge" style="width: 330px; height: 191px; border: 0px;">
-                            </iframe> -->
+                            <blockquote class="badgr-badge" style="font-family: Helvetica, Roboto, &quot;Segoe UI&quot;, Calibri, sans-serif;"><a href="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg"><img width="120px" height="120px" src="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg/image"></a><p class="badgr-badge-name" style="hyphens: auto; overflow-wrap: break-word; word-wrap: break-word; margin: 0; font-size: 16px; font-weight: 600; font-style: normal; font-stretch: normal; line-height: 1.25; letter-spacing: normal; text-align: left; color: #05012c;">Full Stack Coding Program - Restful API Badge</p><p class="badgr-badge-date" style="margin: 0; font-size: 12px; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #555555;"><strong style="font-size: 12px; font-weight: bold; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #000;">Awarded: </strong>Oct 31, 2023</p><p class="badgr-badge-recipient" style="margin: 0; font-size: 12px; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #555555;"><strong style="font-size: 12px; font-weight: bold; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #000;">Awarded To: </strong><span style="display: block;"> Alicia Villegas</span></p><p style="margin: 16px 0; padding: 0;"><a class="badgr-badge-verify" target="_blank" href="https://badgecheck.io?url=https%3A%2F%2Fapi.badgr.io%2Fpublic%2Fassertions%2FtRhbPUliSxqdDzwnkvoTJg" style="box-sizing: content-box; display: flex; align-items: center; justify-content: center; margin: 0; font-size:14px; font-weight: bold; width: 48px; height: 16px; border-radius: 4px; border: solid 1px black; text-decoration: none; padding: 6px 16px; margin: 16px 0; color: black;">VERIFY</a></p><script async="async" src="https://badgr.com/assets/widgets.bundle.js"></script></blockquote>
 
                         </li>
-                        <li><strong>Github Repository</strong>: <a href="https://github.com/avillegas1717/DungeonApp.git">DungeonApp.git</a></li>
+
+                        <!--GitHub Repository-->
+                        <li><strong>Github Repository</strong>: <a href="https://github.com/avillegas1717/ToDoAPI.git">ToDoAPI.git</a></li>
                     </ul>
                 </div>
                 <div class="portfolio-description">
                     <h2>Project Requirements</h2>
                     <p>
                         <ul>
-                            <li>Create GitHub repositories.</li>
-                            <li>Create a console for the application.</li>
-                            <li>Wireframe the project.</li>
-                            <li>Create a class library that will store custom classes.</li>
-                            <li>Create a menu of options for users.</li>
-                            <li>Track users’ scores and display when they view their character.</li>
-                            <li>Write at least 5 unit tests for methods in the application.</li>
+                            <li>Create a relational database.</li>
+                            <li>Add data beginning with lookup tables.</li>
+                            <li>Create the API layer and data layer of the project.</li>
+                            <li>Utilize Entity Framework to create domain models for database objects.</li>
+                            <li>Update the connection strings in the API layer.</li>
+                            <li>Create a Data Transfer Object for each Domain Model.</li>
+                            <li>Test each API endpoint in Postman.</li>
                         </ul>
                     </p>
                 </div>
