--- a/PortfolioMVC.UI.MVC/Views/Home/Classmates.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Classmates.cshtml
@@ -79,7 +79,7 @@
                     <img src="~/img/MyUploads/Gene.jpg" class="" alt="">
                     <h4>Gene Cathcart</h4>
                     <p>
-                        <a href="http://www.genecathcart.com">genecathcart.com</a>
+                        <a href="http://genecathcart.com">genecathcart.com</a>
                     </p>
                 </div>
             </div>
