--- a/PortfolioMVC.UI.MVC/Views/Home/Contact.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Contact.cshtml
@@ -8,7 +8,7 @@
 <!-- TODO | UPDATE INFO | UPDATE CONTACT PHP FORM-->
 <!-- ======= Contact Section ======= -->
 <section id="contact" class="contact">
-    <div class="container" data-aos="fade-up">
+    <div class="container col-md-7" data-aos="fade-up">
 
         <br />
         <br />
