--- a/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Portfolio";
 }
 
@@ -14,27 +13,27 @@
         <br />
         <div class="section-title">
             <h2>Portfolio</h2>
-            <!-- <p>
+            <p>
               Projects completed at Centriq
-            </p> -->
-
-            <P>***PROJECTS WILL BE UPDATED SOON***</P>
+            </p> 
+ 
+            @*<P>***PROJECTS WILL BE UPDATED SOON***</P> *@
         </div>
 
-      
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <!--Portfolio filters | uncomment later if needed-->
+        @* <div class="row" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-12 d-flex justify-content-center">
 
-                <!--Portfolio filters | uncomment later if needed-->
+               
                 <ul id="portfolio-flters">
-                    @* <li data-filter="*" class="filter-active">All</li>
+                    <li data-filter="*" class="filter-active">All</li>
                     <li data-filter=".filter-app">App</li>
                     <li data-filter=".filter-card">Card</li>
-                    <li data-filter=".filter-web">Web</li> *@
+                    <li data-filter=".filter-web">Web</li>
                 </ul>
 
             </div>
-        </div>
+        </div> *@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -52,67 +51,68 @@
                                data-gallery="portfolioGallery"
                                class="portfolio-lightbox"
                                title="DungeonApp"><i class="bx bx-plus"></i></a>
+                              
+                                
 
-                            <a href=@Url.Action("_DetailsDungeonPartial", "Home")
-                               class="portfolio-details-lightbox"
-                               data-glightbox="type: external"
-                               title="Portfolio Details"><i class="bx bx-link"></i></a>
+                            <!--Uncomment when ready to link details pages:-->
+                            @*  <a href=@Url.Action("_DetailsDungeonPartial", "Home")
+                            class="portfolio-details-lightbox"
+                            data-glightbox="type: external"
+                            title="Portfolio Details"><i class="bx bx-link"></i></a> *@
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End Dungeon -->
-
             <!-- StoreFront -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                 <div class="portfolio-wrap">
-                    <img src="~/img/MyUploads/portfolio/StoreFront/StoreFront1.png" 
-                    class="img-fluid" alt="">
+                    <img src="~/img/MyUploads/portfolio/StoreFront/StoreFront1.png"
+                         class="img-fluid" alt="">
 
                     <div class="portfolio-info">
                         <h4>Store Front Database</h4>
                         <p>SQL</p>
 
                         <div class="portfolio-links">
-                            <a href="~/img/MyUploads/Projects/SQLBadge_2023.png" 
-                            data-gallery="portfolioGallery" 
-                            class="portfolio-lightbox" 
-                            title="Web 3"><i class="bx bx-plus"></i></a>
+                            <a href="~/img/MyUploads/Projects/SQLBadge_2023.png"
+                               data-gallery="portfolioGallery"
+                               class="portfolio-lightbox"
+                               title="Web 3"><i class="bx bx-plus"></i></a>
 
-                            <a href=@Url.Action("_DetailsSQLPartial", "Home")
-                               class="portfolio-details-lightbox" 
-                            data-glightbox="type: external" 
-                            title="Portfolio Details"><i class="bx bx-link"></i></a>
+                            <!--Uncomment when ready to link details pages:-->
+                            @*  <a href=@Url.Action("_DetailsSQLPartial", "Home")
+                            class="portfolio-details-lightbox"
+                            data-glightbox="type: external"
+                            title="Portfolio Details"><i class="bx bx-link"></i></a> *@
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End StoreFront -->
-
             <!-- TODO | MVC -->
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="portfolio-wrap">
-                    <img src="~/img/MyUploads/tealLogo.jpeg" 
-                    class="img-fluid" alt="">
+            @* <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+            <img src="~/img/MyUploads/tealLogo.jpeg"
+            class="img-fluid" alt="">
 
-                    <div class="portfolio-info">
-                        <h4>Store Front MVC Site</h4>
-                        <p>.NET MVC</p>
-                        <div class="portfolio-links">
-                            <a href="~/img/portfolio/portfolio-3.jpg" 
-                            data-gallery="portfolioGallery" 
-                            class="portfolio-lightbox" 
-                            title="App 2"><i class="bx bx-plus"></i></a>
+            <div class="portfolio-info">
+            <h4>Store Front MVC Site</h4>
+            <p>.NET MVC</p>
+            <div class="portfolio-links">
+            <a href="~/img/portfolio/portfolio-3.jpg"
+            data-gallery="portfolioGallery"
+            class="portfolio-lightbox"
+            title="StoreFront"><i class="bx bx-plus"></i></a>
 
-                            <a href=@Url.Action("_DetailsStoreFrontPartial", "Home")
-                               class="portfolio-details-lightbox" 
-                            data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                        </div>
-                    </div>
-                </div>
+            <a href=@Url.Action("_DetailsStoreFrontPartial", "Home")
+            class="portfolio-details-lightbox"
+            data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
+            </div>
+            </div>
+            </div>  *@
             <!-- End MVC -->
-
             <!-- API -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
@@ -123,22 +123,21 @@
                         <p>Restful API</p>
 
                         <div class="portfolio-links">
-                            <a href="~/img/MyUploads/Portfolio/ToDoAPI/ToDoAPI1.png" 
-                            data-gallery="portfolioGallery" 
-                            class="portfolio-lightbox" 
-                            title="ToDo API 1"><i class="bx bx-plus"></i></a>
+                            <a href="~/img/MyUploads/Portfolio/ToDoAPI/ToDoAPI1.png"
+                               data-gallery="portfolioGallery"
+                               class="portfolio-lightbox"
+                               title="ToDo API 1"><i class="bx bx-plus"></i></a>
 
-
-                            <a href=@Url.Action("_DetailsToDoPartial", "Home")
-                               class="portfolio-details-lightbox" 
-                            data-glightbox="type: external" 
-                            title="Portfolio Details"><i class="bx bx-link"></i></a>
+                            <!--Uncomment when ready to link details pages:-->
+                            @*  <a href=@Url.Action("_DetailsToDoPartial", "Home")
+                            class="portfolio-details-lightbox"
+                            data-glightbox="type: external"
+                            title="Portfolio Details"><i class="bx bx-link"></i></a> *@
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End API -->
-
             <!-- TODO | TO DO APP -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                 <div class="portfolio-wrap">
@@ -147,38 +146,39 @@
                         <h4>To Do App</h4>
                         <p>React</p>
                         <div class="portfolio-links">
-                            <a href="~/img/portfolio/portfolio-5.jpg" 
-                            data-gallery="portfolioGallery" 
-                            class="portfolio-lightbox" 
-                            title="Web 2"><i class="bx bx-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-5.jpg"
+                               data-gallery="portfolioGallery"
+                               class="portfolio-lightbox"
+                               title="Web 2"><i class="bx bx-plus"></i></a>
 
-                            <a href=@Url.Action("_DetailsAPIPartial", "Home")
-                               class="portfolio-details-lightbox" 
-                            data-glightbox="type: external" 
-                            title="Portfolio Details"><i class="bx bx-link"></i></a>
+                            <!--Uncomment when ready to link details pages:-->
+                            @*  <a href=@Url.Action("_DetailsAPIPartial", "Home")
+                            class="portfolio-details-lightbox"
+                            data-glightbox="type: external"
+                            title="Portfolio Details"><i class="bx bx-link"></i></a> *@
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End Todo -->
-
             <!-- TEAM PROJECT -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="portfolio-wrap">
                     <img src="~/img/MyUploads/tealLogo.jpeg" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4>TEAM PROJECT</h4>
-                        <p>App</p>
+                        <p>Scheduling Administrative Tool</p>
                         <div class="portfolio-links">
-                            <a href="~/img/portfolio/portfolio-6.jpg" 
-                            data-gallery="portfolioGallery" 
-                            class="portfolio-lightbox" 
-                            title="App 3"><i class="bx bx-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-6.jpg"
+                               data-gallery="portfolioGallery"
+                               class="portfolio-lightbox"
+                               title="SAT"><i class="bx bx-plus"></i></a>
 
-                            <a href=@Url.Action("_DetailsTeamPartial", "Home")
-                               class="portfolio-details-lightbox" 
-                            data-glightbox="type: external" 
-                            title="Portfolio Details"><i class="bx bx-link"></i></a>
+                            <!--Uncomment when ready to link details pages:-->
+                            @*  <a href=@Url.Action("_DetailsTeamPartial", "Home")
+                            class="portfolio-details-lightbox"
+                            data-glightbox="type: external"
+                            title="Portfolio Details"><i class="bx bx-link"></i></a> *@
                         </div>
                     </div>
                 </div>
@@ -225,11 +225,12 @@
               </div>
             </div> -->
 
+
+            <br />
+            <br />
+            <br />
+            <br />
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
     </div>
 </section>
 <!-- End Portfolio Section -->
