--- a/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
   <!-- Template Main CSS File -->
     <link href="~/css/style.css" rel="stylesheet">
 
+    <!-- Custom CSS -->
+    <link href="~/css/styleCustom.css" rel="stylesheet">
+
 
 
   <!-- =======================================================
@@ -84,7 +87,7 @@
           <i class="bi bi-linkedin"></i>
          </a>
 
-           <a href="~/img/MyUploads/AVillegasResume.docx" class="btn-custom">Download CV</a>
+                        <a href="~/img/MyUploads/AliciaVillegas-ResumeIT.docx" class="btn-custom">Download CV</a>
                   
       </div>
     </div>
@@ -97,7 +100,7 @@
 
 
 
-  <div class="container">
+        <div class="container" style="min-height: calc(100vh-54px)">
       @RenderBody()
   </div>
  
