--- a/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
           <i class="bi bi-linkedin"></i>
          </a>
 
-                        <a href="~/img/MyUploads/AliciaVillegas-ResumeIT.docx" class="btn-custom">Download CV</a>
+         <a href="~/img/MyUploads/AliciaVillegas-ResumeIT.docx" class="btn-custom">Download CV</a>
                   
       </div>
     </div>
@@ -106,7 +106,7 @@
  
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <footer id="footer" class="fixed-bottom">
     
       <div class="copyright">
         &copy; Copyright 2023 <strong><span>Alicia Villegas</span></strong>. All Rights Reserved
@@ -137,6 +137,9 @@
 
   <!-- Template Main JS File -->
         <script src="~/js/main.js"></script>
+
+
+
 
 
         @await RenderSectionAsync("Scripts", false)
