--- a/PortfolioMVC.UI.MVC/Views/Home/EmailConfirmation.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/EmailConfirmation.cshtml
@@ -6,33 +6,31 @@
 
 
 <section id="emailConf" class="emailConf">
-    <div class="container" data-aos="fade-up">
+    <div class="container col-md-10" data-aos="fade-up">
 
         <br />
         <br />
         <br />
         <br />
-        <div class="col-md-6 d-flex align-items-center mt-4">
-            <div class="emailConf icon-box">
+        <div class="row">
+            <div class="col-md-10 align-items-center mt-4">
+                <div class="emailConf icon-box">
 
-                <h2>Your message was sent!</h2>
-                <p>
-                    Thank you for your interest. I look forward to speaking with you soon.
-                    <br />
-                    <br />
-                    <img src="/img/MyUploads/emailConf.jpg" class="img-fluid" alt="lego stormtrooper walking in desert" />
-                </p>
+                    <h2>Your message was sent!</h2>
+                    <p>
+                        Thank you for your interest. I look forward to speaking with you soon.
+                        <br />
+                        <br />
+                        <img src="/img/MyUploads/emailConf.jpg" class="img-fluid" alt="lego stormtrooper walking in desert" />
+                    </p>
 
+                </div>
             </div>
+            <br />
+            <br />
+            <br />
+            <br />
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
     </div>
 </section>
-<br />
-<br />
-<br />
-<br />
-<br />
+
