--- a/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
@@ -2,33 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <!--Mobile Metas-->
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <!--Site Metas-->
-  <meta content="Student portfolio site project" name="description">
-  <meta content="Web Developer" name="keywords">
-  <meta content="Alicia Villegas" name="author">
+    <!--Mobile Metas-->
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <!--Site Metas-->
+    <meta content="Student portfolio site project" name="description">
+    <meta content="Web Developer" name="keywords">
+    <meta content="Alicia Villegas" name="author">
 
     <title>@ViewData["Title"] | Alicia Villegas | Personal Portfolio Site</title>
 
-  <!-- Favicons -->
-  <link href="~/img/MyUploads/favicons/white/favicon-16x16.png" rel="icon">
-  <link href="~/img/MyUploads/favicons/white/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="~/img/MyUploads/favicons/white/favicon-16x16.png" rel="icon">
+    <link href="~/img/MyUploads/favicons/white/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="~/vendor/aos/aos.css" rel="stylesheet">
-  <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="~/vendor/aos/aos.css" rel="stylesheet">
+    <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="~/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="~/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+    <!-- Template Main CSS File -->
     <link href="~/css/style.css" rel="stylesheet">
 
     <!-- Custom CSS -->
@@ -36,96 +36,107 @@
 
 
 
-  <!-- =======================================================
-  * Template Name: Kelly
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- =======================================================
+    * Template Name: Kelly
+    * Updated: Sep 18 2023 with Bootstrap v5.3.2
+    * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 </head>
 
 <body>
 
-  
+
     <div class="background" style="background-image: url('img/MyUploads/Background.jpg');">
-  
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <nav id="navbar" class="navbar order-last order-md-0">
-        <ul>
-            <li>
-                <a href=@Url.Action("Index", "Home")>Home</a>
-            </li>
-            <li>
-                <a href=@Url.Action("About", "Home")>About</a>
-            </li>
-            <li>
-                <a href=@Url.Action("Portfolio", "Home")>Portfolio</a>
-            </li>
-            <li>
-                <a href=@Url.Action("Classmates", "Home")>Classmates</a>
-            </li>
-            <li>
-                <a href=@Url.Action("Contact", "Home")>Contact</a>
-            </li>
-          
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-      <!-- .navbar -->
+        <!-- ======= Header ======= -->
+        <header id="header" class="fixed-top">
+            <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <!-- Social Links -->
-      <div class="container-fluid d-flex justify-content-end align-items-center order-last">
-      <div class="navbar-social-links order-last md-0">
-         <a href="https://github.com/avillegas1717" class="instagram"><i class="bi bi-github"></i>
-         </a>
+                <nav id="navbar" class="navbar order-last order-md-0">
+                    <ul>
+                        <li>
+                            <a href=@Url.Action("Index", "Home")>Home</a>
+                        </li>
+                        <li>
+                            <a href=@Url.Action("About", "Home")>About</a>
+                        </li>
+                        <li>
+                            <a href=@Url.Action("Portfolio", "Home")>Portfolio</a>
+                        </li>
+                        <li>
+                            <a href=@Url.Action("Classmates", "Home")>Classmates</a>
+                        </li>
+                        <li>
+                            <a href=@Url.Action("Contact", "Home")>Contact</a>
+                        </li>
 
-         <a href="http://linkedin.com/in/alicia-m-villegas" class="linkedin">
-          <i class="bi bi-linkedin"></i>
-         </a>
+                    </ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </nav>
+                <!-- .navbar -->
+                <!-- Social Links -->
+                <div class="container-fluid d-flex justify-content-end align-items-center order-last">
+                    <div class="navbar-social-links order-last md-0">
+                        <a href="https://github.com/avillegas1717" class="instagram">
+                            <i class="bi bi-github"></i>
+                        </a>
 
-         <a href="~/img/MyUploads/AliciaVillegas-ResumeIT.docx" class="btn-custom">Download CV</a>
-                  
-      </div>
-    </div>
-      <!-- End Social Links -->
+                        <a href="http://linkedin.com/in/alicia-m-villegas" class="linkedin">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
 
-    </div>
+                        <a href="~/img/MyUploads/AliciaVillegas-ResumeIT.docx" class="btn-custom">Download CV</a>
 
-  </header>
-  <!-- End Header -->
+                    </div>
+                </div>
+                <!-- End Social Links -->
+
+            </div>
+
+        </header>
+        <!-- End Header -->
 
 
 
         <div class="container" style="min-height: calc(100vh-54px)">
-      @RenderBody()
-  </div>
- 
+            @RenderBody()
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="fixed-bottom">
-    
-      <div class="copyright">
-        &copy; Copyright 2023 <strong><span>Alicia Villegas</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
+        </div>
+
+
+        <!-- ======= Footer ======= -->
+        <footer id="footer" class="fixed-bottom">
+
+            <div class="copyright">
+                &copy; Copyright 2023 <strong><span>Alicia Villegas</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
                 Designed by: <a href=@Url.ActionLink("https://bootstrapmade.com/")><strong>BootstrapMade</strong></a>
-      </div>
-    
-  </footer>
-  <!-- End  Footer -->
+            </div>
 
-  <!-- <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
+        </footer>
+        <!-- End  Footer -->
 
-  <!-- Vendor JS Files -->
+
+        <!-- Lightbox for image gallery -->
+        <div id="lightbox-container">
+            <h5 class="text-light m-4">Click anywhere to close...</h5>
+            <!-- Container for our images -->
+            <div id="lightbox-content">
+                <!-- <img> tag will be inserted here when a thumbnail is clicked -->
+            </div>
+        </div>
+
+        <!-- <div id="preloader"></div>
+        <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
+
+        <!-- Vendor JS Files -->
         <script src="~/vendor/purecounter/purecounter_vanilla.js"></script>
         <script src="~/vendor/aos/aos.js"></script>
         <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -135,8 +146,34 @@
         <script src="~/vendor/waypoints/noframework.waypoints.js"></script>
         <script src="~/js/jquery-3.6.0.min.js"></script>
 
-  <!-- Template Main JS File -->
+        <!-- Template Main JS File -->
         <script src="~/js/main.js"></script>
+
+
+        <!--Lightbox Script-->
+        <script>
+            $('.thumbLink').on('click', function (e) {
+                // preventing page reload when clicking <a>
+                // e.preventDefault();
+                console.log(this);
+
+                // capture the img src
+                let imgSrc = $(this).children('.thumb').attr('src');
+                console.log(imgSrc);
+
+                // Plug an img tag with the src info into the lightbox-content div
+                $('#lightbox-content').html(`<img src="${imgSrc}" alt="portfolio item" class="img-responsive">`);
+
+                // Make the lightbox-container visible by fading in
+                $('#lightbox-container').fadeIn(500);
+
+                // When the user clicks anywhere in the lightbox-container, fadeOut()
+                $('#lightbox-container').on('click', function () {
+                    $(this).fadeOut(500);
+                });
+            });
+        </script>
+
 
 
 
