--- a/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
@@ -21,10 +21,10 @@
 
             <!--SQL StoreFront-->
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">SQL | Database Schema</h5>
+                    <h5>SQL | Database Schema</h5>
                     <p>
                         @* <a href="#">#</a> *@
                     </p>
@@ -44,7 +44,9 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Project desscription here</p>
+                    <p>
+                        Used MSSMS to create a relational database, employing lookup tables to establish relationships between entities. These lookup tables facilitate data integrity by storing common values that can be referenced by foreign keys in other tables, promoting consistency and efficient data management.
+                        </p>
 
                     <a href="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA">
                         <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA/image"></">
@@ -54,10 +56,10 @@
             <!--End SQL StoreFront-->
 
             <!--Dungeon-->
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">C# | Dungeon Console App</h5>
+                    <h5>C# | Dungeon Console App</h5>
                     <p>
                         <a href="https://github.com/avillegas1717/DungeonApp.git">DungeonApp.git</a>
                     </p>
@@ -77,7 +79,7 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Project desscription here</p>
+                    <p>Immersive RPG experience with this console app crafted in C#. Name your character, choose weapons, and face off against randomly selected monsters. Track your health, and aim for the top score in this engaging project that showcases the versatility and functionality of C# for console game development.</p>
 
                     <a href="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g">
                         <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g/image">
@@ -88,10 +90,10 @@
             <!--End Dungeon-->
             <!--ToDoAPI-->
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">REST API | To Do App API</h5>
+                    <h5>REST API | To Do App API</h5>
                     <p>
                         <a href="https://github.com/avillegas1717/ToDoAPI.git">avillegas1717/ToDoAPI.git</a>
                     </p>
@@ -111,7 +113,10 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Project desscription here</p>
+                    <p>
+                        Supports CRUD operations with endpoints for list retrieval, single record grabs, creation, updates, and deletions across multiple controllers. DTOs and CORS make sure everything's tidy and secure.
+          
+                    </p>
 
                     <a href="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg">
                         <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg/image"></">
@@ -121,10 +126,10 @@
             <!--End ToDo API-->
             <!--Static Site-->
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">Front-End | Static Personal Site</h5>
+                    <h5>Front-End | Static Personal Site</h5>
                     <p>
                         <a href="https://github.com/avillegas1717/PortfolioSiteV2.git">PortfolioSiteV2.git</a>
                     </p>
@@ -144,7 +149,7 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Project desscription here</p>
+                    <p>Static personal site developed using HTML and CSS consists of web pages with fixed content and layout, devoid of dynamic or interactive elements, showcasing information in a visually structured format.</p>
 
                     <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
                         <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
@@ -152,12 +157,45 @@
                 </div>
             </div>
             <!--End Static Site-->
+            <!--SAT-->
+
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
+
+                    <h5>TEAM | Scheduling Adminstrative Tool</h5>
+                    <p>
+                        <a href="#"></a>
+                    </p>
+
+                    <!--lightgallery-->
+                    <div class="demo-gallery">
+                        <ul id="lightgallery">
+                            <li>
+                                <a class="thumbLink" href="javascript:void(0)">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/SAT/SAT1.png">
+                                    <div class="demo-gallery-poster">
+                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end lightgallery-->
+
+                    <p>Collaborated in paired programming to create a robust .NET Core MVC scheduling administrative tool, seamlessly managing and optimizing resource allocation for efficient task scheduling within the organization.</p>
+
+                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
+                    </a> *@
+                </div>
+            </div>
+            <!--End SAT-->
             <!--React ToDo-->
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">REACT | To Do App</h5>
+                    <h5>REACT | To Do App</h5>
                     <p>
                         <a href="https://github.com/avillegas1717/react_todo.git">avillegas1717/react_todo.git</a>
                         @* <a href="http://todo.aliciavillegas.net">todo.aliciavillegas.net</a> *@
@@ -188,12 +226,12 @@
             <!--End React ToDo-->
             <!--StoreFront MVC-->
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">.NET Core MVC | Store Front Site</h5>
+                    <h5>.NET Core MVC | Store Front Site</h5>
                     <p>
-                        <a href="#">#</a>
+                        <a href="#"></a>
                     </p>
 
                     <!--lightgallery-->
@@ -218,47 +256,16 @@
                     </a> *@
                 </div>
             </div>
-            <!--End StoreFront MVC-->            <!--SAT-->
+            <!--End StoreFront MVC-->            
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
-
-                    <h5 class="text-light">TEAM | Scheduling Adminstrative Tool</h5>
-                    <p>
-                        <a href="#">#</a>
-                    </p>
-
-                    <!--lightgallery-->
-                    <div class="demo-gallery">
-                        <ul id="lightgallery">
-                            <li>
-                                <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/SAT/SAT1.png">
-                                    <div class="demo-gallery-poster">
-                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--end lightgallery-->
-
-                    <p>Project desscription here</p>
-
-                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
-                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
-                    </a> *@
-                </div>
-            </div>
-            <!--End SAT-->
             <!--Admin-->
 
-            <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box" style="min-height: 304px">
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-                    <h5 class="text-light">GROUP | Admin Dashboard Intranet Site</h5>
+                    <h5>GROUP | Admin Dashboard Intranet Site</h5>
                     <p>
-                        <a href="#">#</a>
+                        <a href="#"></a>
                     </p>
 
                     <!--lightgallery-->
