updated some content

--- a/PortfolioMVC.UI.MVC/Views/Home/Index.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Index.cshtml
@@ -11,9 +11,13 @@
         <h1>Alicia Villegas</h1>
         <h2>Full Stack Web Dev</h2>
         <h3>Kansas City, MO</h3>
-        <h4>
-            "There are two ways to write error-free programs;
-            <br>only the third one works."
+        <h4 class="pt-2">
+            "Everyone can rise above their circumstances and achieve success
+            <br />
+            if they are dedicated and passionate about what they do."
+            <br />
+            <br>
+            -Nelson Mandela
         </h4>
 
     </div>
