--- a/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
@@ -46,7 +46,7 @@
 
                     <p>
                         Used MSSMS to create a relational database, employing lookup tables to establish relationships between entities. These lookup tables facilitate data integrity by storing common values that can be referenced by foreign keys in other tables, promoting consistency and efficient data management.
-                        </p>
+                    </p>
 
                     <a href="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA">
                         <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA/image"></">
@@ -54,7 +54,6 @@
                 </div>
             </div>
             <!--End SQL StoreFront-->
-
             <!--Dungeon-->
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
                 <div class="icon-box">
@@ -115,7 +114,7 @@
 
                     <p>
                         Supports CRUD operations with endpoints for list retrieval, single record grabs, creation, updates, and deletions across multiple controllers. DTOs and CORS make sure everything's tidy and secure.
-          
+
                     </p>
 
                     <a href="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg">
@@ -164,7 +163,7 @@
 
                     <h5>TEAM | Scheduling Adminstrative Tool</h5>
                     <p>
-                        <a href="#"></a>
+                        <a href="https://github.com/avillegas1717/SAT.git">avillegas1717/SAT.git</a>
                     </p>
 
                     <!--lightgallery-->
@@ -184,12 +183,45 @@
 
                     <p>Collaborated in paired programming to create a robust .NET Core MVC scheduling administrative tool, seamlessly managing and optimizing resource allocation for efficient task scheduling within the organization.</p>
 
+                    <a href="https://api.badgr.io/public/assertions/Nmx8GZzmQsmt1RwzH2PlsA">
+                        <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Nmx8GZzmQsmt1RwzH2PlsA/image"></">
+                    </a>
+                </div>
+            </div>
+            <!--End SAT-->
+            <!--Admin-->
+
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
+
+                    <h5>GROUP | Admin Dashboard Intranet Site</h5>
+                    <p>
+                        <a href="#"></a>
+                    </p>
+
+                    <!--lightgallery-->
+                    <div class="demo-gallery">
+                        <ul id="lightgallery">
+                            <li>
+                                <a class="thumbLink" href="javascript:void(0)">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/AdminDVPro/Admin1.png">
+                                    <div class="demo-gallery-poster">
+                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end lightgallery-->
+
+                    <p>Project desscription here</p>
+
                     @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
                     <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
                     </a> *@
                 </div>
             </div>
-            <!--End SAT-->
+            <!--End Admin-->
             <!--React ToDo-->
 
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
@@ -256,41 +288,7 @@
                     </a> *@
                 </div>
             </div>
-            <!--End StoreFront MVC-->            
-
-            <!--Admin-->
-
-            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box">
-
-                    <h5>GROUP | Admin Dashboard Intranet Site</h5>
-                    <p>
-                        <a href="#"></a>
-                    </p>
-
-                    <!--lightgallery-->
-                    <div class="demo-gallery">
-                        <ul id="lightgallery">
-                            <li>
-                                <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/AdminDVPro/Admin1.png">
-                                    <div class="demo-gallery-poster">
-                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--end lightgallery-->
-
-                    <p>Project desscription here</p>
-
-                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
-                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
-                    </a> *@
-                </div>
-            </div>
-            <!--End Admin-->
+            <!--End StoreFront MVC-->
             <!--Uncomment if need more projects-->
             @* <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
             <div class="icon-box">
