--- a/PortfolioMVC.UI.MVC/wwwroot/css/styleCustom.css
+++ b/PortfolioMVC.UI.MVC/wwwroot/css/styleCustom.css
@@ -328,7 +328,24 @@ h6 {
     }
 }
 
-   
+/* Mobile Nav */
+
+@media screen and (max-width: 992px){
+
+    ul#nav-link-container {
+        transition: all 0.5s ease-in-out;
+        display: none;
+    }
+
+        ul#nav-link-container.expanded {
+            display: inline-block;
+        }
+
+    div#nav-container.expanded {
+        height: 100vh;
+    }
+
+}
 
 /*--------------------------------------------------------------
 # Hero Section | **COMPLETE** | CLEAN UP CSS
@@ -381,7 +398,7 @@ h6 {
 @media (max-width: 992px) {
     #hero:before {
         content: "";
-        background: rgba(255, 255, 255, 0.8);
+/*        background: rgba(255, 255, 255, 0.8);*/
         position: absolute;
         bottom: 0;
         top: 0;
