--- a/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
@@ -196,7 +196,7 @@
 
                     <h5>GROUP | Admin Dashboard Intranet Site</h5>
                     <p>
-                        <a href="#"></a>
+                        <a href="https://github.com/avillegas1717/AtomicSynergistics.git">avillegas1717/AtomicSynergistics.git</a>
                     </p>
 
                     <!--lightgallery-->
@@ -214,7 +214,7 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Project desscription here</p>
+                    <p>Worked as an engineering team utilizing SCRUM methodologies to develop an administrative intranet application that allows authorized staff to manage company records. This is a fully responsive MVC site with a relational database from Microsoft SQL Server. </p>
 
                     @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
                     <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
@@ -248,7 +248,7 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Project desscription here</p>
+                    @* <p>Project desscription here</p> *@
 
                     @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
                     <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
@@ -263,7 +263,7 @@
 
                     <h5>.NET Core MVC | Store Front Site</h5>
                     <p>
-                        <a href="#"></a>
+                        @* <a href="#"></a> *@
                     </p>
 
                     <!--lightgallery-->
@@ -280,8 +280,7 @@
                         </ul>
                     </div>
                     <!--end lightgallery-->
-
-                    <p>Project desscription here</p>
+                    @* <p>Project desscription here</p> *@
 
                     @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
                     <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
